tests/pass/no-unimported-text-namespace.tsx
import * as Text from "@/components/ui/text";

const view = Text.create();
const root = <Text.Root />;
