tests/fail/no-unimported-text-member.tsx
const selfClosing = <Text.Root />;
const paired = <Text.Label>Missing import</Text.Label>;
